--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "the subset of GraphQL used by Relay",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm run jest",
+    "jest": "NODE_ENV=test jest $@",
+    "lint": "node_modules/.bin/eslint .",
+    "lint2": "node_modules/eslint/bin/eslint.js .",
+    "bnode": "NODE_ENV=dev babel-node",
+    "check": "flow check"
   },
   "repository": {
     "type": "git",
@@ -20,5 +25,32 @@
   "bugs": {
     "url": "https://github.com/iamchenxin/relayql/issues"
   },
-  "homepage": "https://github.com/iamchenxin/relayql#readme"
+  "homepage": "https://github.com/iamchenxin/relayql#readme",
+  "dependencies": {
+    "flow-graphql": "^0.6.4"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.8.0",
+    "babel-core": "^6.8.0",
+    "babel-eslint": "^6.0.4",
+    "babel-jest": "^12.0.2",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-flow-strip-types": "^6.8.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-fbjs": "^1.0.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.8.0",
+    "eslint": "^2.9.0",
+    "eslint-plugin-babel": "^3.2.0",
+    "eslint-plugin-flow-vars": "^0.4.0",
+    "eslint-plugin-flowtype": "^2.2.7",
+    "fbjs-scripts": "^0.7.0",
+    "flow-dynamic": "0.0.9",
+    "flow-graphql": "^0.6.4",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^1.6.0",
+    "jest-cli": "^12.0.2"
+  }
 }
