old dynamic check,will jump to v0.61`s any

--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "eslint-plugin-flow-vars": "^0.4.0",
     "eslint-plugin-flowtype": "^2.3.0",
     "fbjs-scripts": "^0.7.1",
-    "flow-bin": "^0.27.0",
+    "flow-bin": "^0.28.0",
+    "flow-graphql": "file:///home/iamchenxin/project/tmp/graphpub/flow-graphql6",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-rename": "^1.2.2",
