--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "relayql",
-  "version": "0.1.0",
+  "version": "0.1.3",
   "description": "the subset of GraphQL used by Relay",
   "main": "./lib/index.js",
   "directories": {
@@ -40,14 +40,14 @@
   "dependencies": {
     "babel-plugin-transform-runtime": "^6.9.0",
     "babel-runtime": "^6.11.6",
-    "flow-dynamic": "0.0.12",
-    "flow-graphql": "^0.7.0"
+    "flow-dynamic": "^0.0.14",
+    "graphql": "^0.8.2"
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
     "babel-core": "^6.13.2",
     "babel-eslint": "^6.1.2",
-    "babel-jest": "^14.1.0",
+    "babel-jest": "^17.0.2",
     "babel-plugin-transform-flow-strip-types": "^6.8.0",
     "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.13.2",
@@ -58,13 +58,13 @@
     "eslint-plugin-flow-vars": "^0.5.0",
     "eslint-plugin-flowtype": "^2.6.1",
     "express": "^4.14.0",
+    "express-graphql": "^0.6.1",
     "fbjs-scripts": "^0.7.1",
-    "flow-bin": "^0.32.0",
-    "gulp": "^3.9.1",
+    "flow-bin": "^0.36.0",
+    "gulp": "github:gulpjs/gulp#4.0",
     "gulp-babel": "^6.1.2",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
-    "jest-cli": "^14.1.0",
-    "t-express-graphql": "^0.5.4"
+    "jest-cli": "^17.0.3"
   }
 }
